--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "build": "^0.1.4",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
